[tool.poetry]
name = "personal-finance-tracker"
version = "0.1.0"
description = "A CLI tool for tracking personal finances with visualization capabilities"
authors = ["Kholoud Ibrahim <thmanabrahym512@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kholoud512/personal-finance-tracker"
repository = "https://github.com/kholoud512/personal-finance-tracker"
keywords = ["finance", "cli", "budget", "tracker"]
packages = [{include = "finance_tracker"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.scripts]
finance = "finance_tracker.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "^8.1.7"
rich = "^13.7.0"
peewee = "^3.17.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.9"
pre-commit = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

# CONFIGURATION
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "B", "A"]
ignore = []
exclude = [".venv", "dist", "__pycache__"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=finance_tracker --cov-report=html --cov-report=term"
